[package]
name = "stub"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 16
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
anyhow = "1.0.89"
