[package]
name = "stub"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endec = { path = "../endec" }
rand = "*"
anyhow = { workspace = true }
